--- a/index.html
+++ b/index.html
@@ -3,23 +3,36 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="icon" href="public/favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>T Rajesh | Frontend developer</title>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Talagana Rajesh | website developer</title>
 
 
   <!-- Meta Description -->
   <meta name="description"
-    content="Explore the portfolio of Talagana Rajesh, the founder of GetMaterial, a leading notes-sharing platform for NIST students. Discover projects, including the GetMaterial platform, photography portfolio websites, and innovative photo editing solutions like PicAura. Talagana Rajesh is a B.Tech student at NIST University, Berhampur, specializing in web development and AI." />
+    content="Explore the portfolio of Talagana Rajesh, founder of GetMaterial, a leading notes-sharing platform for NIST students. Discover his web development and AI projects." />
 
   <!-- Meta Keywords -->
   <meta name="keywords"
-    content="Talagana Rajesh, talagana rajesh, getmaterial founder, nist notes, nist notes founder, developer of getmaterial, developer of nist notes, T Rajesh, Rajesh Talagana, founder of GetMaterial,Nist University, Nist student, Nist students, NIST notes founder, GetMaterial notes, GetMaterial website, GetMaterial by Rajesh, Rajesh GetMaterial, web developer Talagana Rajesh, NIST College Berhampur, Rajesh NIST notes, Rajesh portfolio, Rajesh web developer, B.Tech NIST Berhampur, NIST notes sharing platform, Rajesh web development, PicAura Rajesh, photography portfolio Rajesh, AI projects by Rajesh, ReactJS developer Rajesh, engineering notes Rajesh, computer science student NIST, founder GetMaterial notes-sharing platform, web development projects Talagana Rajesh, best notes-sharing platform by Rajesh, Rajesh GetMaterial app, GetMaterial website by T Rajesh" />
+    content="Talagana Rajesh,getmaterial nist notes,getmaterial nist founder, talagana rajesh, getmaterial founder, nist notes, nist notes founder, developer of getmaterial, developer of nist notes, T Rajesh, Rajesh Talagana, founder of GetMaterial,Nist University, Nist student, Nist students, NIST notes founder, GetMaterial notes, GetMaterial website, GetMaterial by Rajesh, Rajesh GetMaterial, web developer Talagana Rajesh, NIST College Berhampur, Rajesh NIST notes, Rajesh portfolio, Rajesh web developer, B.Tech NIST Berhampur, NIST notes sharing platform, Rajesh web development, PicAura Rajesh, photography portfolio Rajesh, AI projects by Rajesh, ReactJS developer Rajesh, engineering notes Rajesh, computer science student NIST, founder GetMaterial notes-sharing platform, web development projects Talagana Rajesh, best notes-sharing platform by Rajesh, Rajesh GetMaterial app, GetMaterial website by T Rajesh" />
 
   <!-- Author -->
   <meta name="author" content="Talagana Rajesh" />
+
+
+  <!-- Open Graph -->
+<meta property="og:title" content="Talagana Rajesh | Web Developer" />
+<meta property="og:description" content="Founder of GetMaterial, specializing in web development and AI projects." />
+<meta property="og:image" content="/your-image.jpg" />
+<meta property="og:url" content="https://yourwebsite.com" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Talagana Rajesh | Web Developer" />
+<meta name="twitter:description" content="Explore the portfolio of Talagana Rajesh, founder of GetMaterial." />
+<meta name="twitter:image" content="/your-image.jpg" />
+
 
 
 </head>
