--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Talagana Rajesh | website developer</title>
 
+  <meta name="google-site-verification" content="ETpfMVbd5MVRbbOSI8n5MtBcYkJc7IUWaw9QGhatoCE" />
+
 
   <!-- Meta Description -->
   <meta name="description"
